<resources>

    <string-array name="status_array">
        <item>ALL</item>
        <item>PENDING</item>
        <item>APPROVED</item>
        <item>REJECTED</item>
        <item>IN PROGRESS</item>
        <item>COMPLETED</item>
    </string-array>


    <string-array name="grievance_array">
        <item>ALL</item>
        <item>DAMAGED BRIDGE</item>
        <item>DAMAGED BRIDGE PARAPET</item>
        <item>BREACH ON A ROAD</item>
        <item>DAMAGED RAILING</item>
        <item>SHARP CURVE</item>
        <item>ACCIDENT PRONE ZONE</item>
        <item>DAMAGE STRUCTURES</item>
        <item>POT HOLES</item>
        <item>FALLEN TREE</item>
        <item>DEGREDED ROADS</item>
        <item>CRACKS LEVELING</item>

    </string-array>

    <string-array name="select_grievance_array">
        <item>DAMAGED BRIDGE</item>
        <item>DAMAGED BRIDGE PARAPET</item>
        <item>BREACH ON A ROAD</item>
        <item>DAMAGED RAILING</item>
        <item>SHARP CURVE</item>
        <item>ACCIDENT PRONE ZONE</item>
        <item>DAMAGE STRUCTURES</item>
        <item>POT HOLES</item>
        <item>FALLEN TREE</item>
        <item>DEGREDED ROADS</item>
        <item>CRACKS LEVELING</item>

    </string-array>

    <string name="app_name">Marg Sahayak</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="error_number_invalid">Enter Valid Phone Number</string>
    <string name="error_name_invalid">Enter Valid Data </string>
    <string name="error_required_field">Field Required</string>
    <string name="error_email_invalid">Invalid Email</string>
    <string name="next">Next</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="error_OTP_size_invalid">OTP must be of 4 Digits </string>

    <string name="app_will_send_an_sms_message_to_verify_your_phone_number">App will send an SMS message to verify your phone number</string>
    <string name="otp">OTP</string>
    <string name="verify">VERIFY</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="waiting_to_automatically_datect_an_sms_send_to_n_your_nmumber">Waiting to automatically detect an SMS send to  your number</string>
    <string name="enter_4_digit_otp">Enter 4 digit otp</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email (Optional)</string>
    <string name="your_complaints">Your Complaints</string>
    <string name="offline_complaints">Offline Complaints</string>
    <string name="title_activity_individual_compain_full">individualCompainFullActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="add_complaint">Add complaint</string>
    <string name="contactTitle">Contact Us</string>
    <string name="contactAddress">Secretary\nRoads and Buildings Department\nBlock-14\n2nd
        Floor\nNew Sachivalaya\nGandhinagar - 382010</string>
    <string name="contactNo">Tel No. : +91-79-232 51801/2/3/4\nFax No. : +91-79-23252509</string>
    <string name="contactMail">Email : secrnb@gujarat.gov.in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_individual__detail_">Individual_Detail_Activity</string>
    <string name="take_picture_of_the_affected_region">Take picture of the affected region.</string>
    <string name="select_grievance">Select Grievance</string>
    <string name="add_description_optional">Add Description (Optional)</string>
    <string name="upload">Upload</string>
</resources>
