<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1eeee"
    >

    <TextView
        android:id="@+id/tv_contactUs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f1eeee"
        android:padding="10dp"
        android:text="@string/contactTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/img_locIcon"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:background="#f1eeee"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:srcCompat="@drawable/ic_location_on_black_24dp" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#f1eeee"
        android:padding="0dp"
        android:text="@string/contactAddress"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/img_phoneIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_locIcon">

    </TextView>

    <ImageView
        android:id="@+id/img_phoneIcon"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#f1eeee"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_phoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        app:srcCompat="@drawable/ic_phone_android_black_24dp" />

    <TextView
        android:id="@+id/tv_phoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#f1eeee"
        android:padding="0dp"
        android:text="@string/contactNo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/img_emailIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_phoneIcon" />

    <ImageView
        android:id="@+id/img_emailIcon"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#f1eeee"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phoneNo"
        app:srcCompat="@drawable/ic_email_symbol" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#f1eeee"
        android:padding="0dp"
        android:text="@string/contactMail"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_emailIcon" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contactUs" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toTopOf="@+id/tv_contactUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>