<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/register_progressbar"
        style="?android:attr/progressBarStyleHorizontal"

        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="-12dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorProgressBar"
        android:progressBackgroundTintMode="src_in"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/otpscreen_color_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/enter_your_details"
                android:textSize="@dimen/dim20sp"
                android:theme="@style/mColorText" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobileNoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dim32dp"
                android:layout_marginStart="@dimen/dim32dp"
                android:layout_marginTop="@dimen/dim32dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_name_symbol"
                    android:drawablePadding="@dimen/dim20sp"
                    android:hint="@string/full_name"
                    android:inputType="textAutoComplete"
                    android:maxLength="21" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dim32dp"
                android:layout_marginStart="@dimen/dim32dp"
                android:layout_marginTop="@dimen/dim16dp"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_lastname"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_name_symbol"
                    android:drawablePadding="@dimen/dim20sp"
                    android:hint="@string/last_name"
                    android:inputType="textAutoComplete"
                    android:maxLength="21"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dim32dp"
                android:layout_marginStart="@dimen/dim32dp"
                android:layout_marginTop="@dimen/dim16dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_input_upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_symbol"
                    android:drawablePadding="@dimen/dim20sp"
                    android:hint= "@string/email"
                    android:inputType="textEmailAddress"

                    />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_input_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dim32dp"
                android:layout_marginEnd="@dimen/dim32dp"
                android:layout_marginLeft="@dimen/dim32dp"
                android:layout_marginRight="@dimen/dim32dp"
                android:layout_marginStart="@dimen/dim32dp"
                android:layout_marginTop="@dimen/dim64dp"
                android:background="@drawable/btn_style"
                android:text="@string/save"
                android:textColor="@color/colorWhite" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

</android.support.constraint.ConstraintLayout>
